# linux_agent_manager

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: consolidated_review.md
lam/: app.py
lam/config/: defaults.py
lam/session/: manager.py  pty_process.py
lam/ui/: events.py
lam/ui/keys/: manager.py
lam/ui/widgets/: __init__.py  header_bar.py  input_area.py  session_header.py  session_list_item.py  session_sidebar.py  session_viewer.py  status_bar.py  toast_overlay.py
lam/utils/: logger.py
tame/: __main__.py  app.py
tame/config/: defaults.py  manager.py
tame/git/: diff.py  worktree.py
tame/integrations/letta/: __init__.py  bridge.py  client.py  prompts.py
tame/notifications/: __init__.py  audio.py  desktop.py  engine.py  history.py  models.py  slack.py  webhook.py
tame/session/: __init__.py  manager.py  output_buffer.py  pattern_matcher.py  pty_process.py  session.py  state.py
tame/ui/: events.py
tame/ui/keys/: manager.py
tame/ui/themes/: manager.py
tame/ui/themes/builtin/: cherry_blossom.tcss  dark.tcss  dracula.tcss  gruvbox.tcss  light.tcss  monokai.tcss  nord.tcss  solarized_dark.tcss  solarized_light.tcss
tame/ui/widgets/: __init__.py  cherry_blossom_petals.py  command_palette.py  confirm_dialog.py  diff_viewer.py  easter_egg.py  group_dialog.py  header_bar.py  history_picker.py  memory_dialogs.py  name_dialog.py  search_dialog.py  session_list_item.py  session_search_bar.py  session_sidebar.py  session_viewer.py  status_bar.py  toast_overlay.py
tame/utils/: logger.py
tests/: test_app.py  test_config_manager.py  test_desktop_notifier.py  test_git_worktree.py  test_notification_engine.py  test_output_buffer.py  test_pattern_matcher.py  test_pattern_profiles.py  test_search.py  test_session_list_item.py  test_session_manager.py  test_session_sidebar.py  test_session_state.py  test_session_viewer_fallback.py  test_state_transitions.py  test_tame_screen.py  test_webhook.py
