[project]
name = "linux-agent-manager"
version = "0.1.0"
description = "An intelligent terminal multiplexer for managing multiple parallel AI agent sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "pyte>=0.8.2",
]

[project.optional-dependencies]
audio = [
    "pygame>=2.5.0",
    "simpleaudio>=1.0.4",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "textual-dev>=1.0.0",
]

[project.scripts]
lam = "lam.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lam"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
