[project]
name = "tame"
dynamic = ["version"]
description = "TAME — Terminal Agent Management Environment for managing multiple parallel AI agent sessions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Terminals :: Terminal Emulators/X Terminals",
    "Topic :: Software Development",
]
keywords = [
    "terminal",
    "multiplexer",
    "tui",
    "ai",
    "agent",
    "tmux",
    "session",
    "textual",
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "pyte>=0.8.2",
]

[project.urls]
Homepage = "https://github.com/AshirBorah/linux_agent_manager"
Repository = "https://github.com/AshirBorah/linux_agent_manager"
Issues = "https://github.com/AshirBorah/linux_agent_manager/issues"

[project.optional-dependencies]
audio = [
    "pygame>=2.5.0",
    "simpleaudio>=1.0.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "textual-dev>=1.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
tame = "tame.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tame/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["tame"]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
